// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContactsHeader > should render responsive 1`] = `
<DocumentFragment>
  <section
    class="h-13 flex w-full items-center justify-between bg-theme-secondary-100 px-8 py-1.5 dark:bg-black"
  >
    <h1
      class="mb-0 text-lg"
    >
      My Contacts
    </h1>
    <div
      class="items-top flex justify-end"
    >
      <div
        class="flex items-center text-theme-primary-200"
      >
        <div
          class="relative -my-2"
          data-testid="HeaderSearchBar"
        >
          <div
            class="group"
          >
            <button
              class="ring-focus css-14zm422"
              type="button"
            >
              <div
                class="flex h-5 items-center gap-3"
              >
                <span
                  class="hidden md:block"
                >
                  Search
                </span>
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="magnifying-glass"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M12.1 16.4c4.1-1.7 6-6.5 4.3-10.5C14.7 1.8 9.9 0 5.9 1.6s-6 6.5-4.3 10.5h0c1.8 4.1 6.4 6 10.5 4.3h0zM14.7 14.7L19 19"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <span
          class="mx-0.5 flex md:ml-3.5"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
            type="vertical"
          />
        </span>
      </div>
      <button
        class="-mr-2.5 p-2.5"
        type="button"
      >
        <div
          class="text-theme-primary-300 dark:text-theme-secondary-600 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            id="plus"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M1 10h18M10 1v18"
              />
            </g>
          </svg>
        </div>
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ContactsHeader > should render responsive 2`] = `
<DocumentFragment>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder css-835596"
  >
    <div
      class="mx-auto px-8 lg:container md:px-10"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            My Contacts
          </h1>
          <div
            class="flex items-center text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Manage your frequent Contacts
          </div>
        </div>
        <div>
          <div
            class="items-top flex justify-end"
          >
            <div
              class="flex items-center text-theme-primary-200"
            >
              <div
                class="relative -my-2"
                data-testid="HeaderSearchBar"
              >
                <div
                  class="group"
                >
                  <button
                    class="ring-focus css-14zm422"
                    type="button"
                  >
                    <div
                      class="flex h-5 items-center gap-3"
                    >
                      <span
                        class="hidden md:block"
                      >
                        Search
                      </span>
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          id="magnifying-glass"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M12.1 16.4c4.1-1.7 6-6.5 4.3-10.5C14.7 1.8 9.9 0 5.9 1.6s-6 6.5-4.3 10.5h0c1.8 4.1 6.4 6 10.5 4.3h0zM14.7 14.7L19 19"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <span
                class="mx-0.5 flex md:ml-3.5"
              >
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ya0jcf"
                  type="vertical"
                />
              </span>
            </div>
            <button
              class="ml-6 css-fl4fi0"
              data-testid="contacts__add-contact-btn"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Add Contact
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContactsHeaderExtra > should render responsive 1`] = `
<DocumentFragment>
  <div
    class="items-top flex justify-end"
  >
    <div
      class="flex items-center text-theme-primary-200"
    >
      <div
        class="relative -my-2"
        data-testid="HeaderSearchBar"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-14zm422"
            type="button"
          >
            <div
              class="flex h-5 items-center gap-3"
            >
              <span
                class="hidden md:block"
              >
                Search
              </span>
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="magnifying-glass"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M12.1 16.4c4.1-1.7 6-6.5 4.3-10.5C14.7 1.8 9.9 0 5.9 1.6s-6 6.5-4.3 10.5h0c1.8 4.1 6.4 6 10.5 4.3h0zM14.7 14.7L19 19"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <span
        class="mx-0.5 flex md:ml-3.5"
      >
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
          type="vertical"
        />
      </span>
    </div>
    <button
      class="-mr-2.5 p-2.5"
      type="button"
    >
      <div
        class="text-theme-primary-300 dark:text-theme-secondary-600 css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg
          id="plus"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          >
            <path
              d="M1 10h18M10 1v18"
            />
          </g>
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ContactsHeaderExtra > should render responsive 2`] = `
<DocumentFragment>
  <div
    class="items-top flex justify-end"
  >
    <div
      class="flex items-center text-theme-primary-200"
    >
      <div
        class="relative -my-2"
        data-testid="HeaderSearchBar"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-14zm422"
            type="button"
          >
            <div
              class="flex h-5 items-center gap-3"
            >
              <span
                class="hidden md:block"
              >
                Search
              </span>
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="magnifying-glass"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M12.1 16.4c4.1-1.7 6-6.5 4.3-10.5C14.7 1.8 9.9 0 5.9 1.6s-6 6.5-4.3 10.5h0c1.8 4.1 6.4 6 10.5 4.3h0zM14.7 14.7L19 19"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <span
        class="mx-0.5 flex md:ml-3.5"
      >
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ya0jcf"
          type="vertical"
        />
      </span>
    </div>
    <button
      class="ml-6 css-fl4fi0"
      data-testid="contacts__add-contact-btn"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        Add Contact
      </div>
    </button>
  </div>
</DocumentFragment>
`;
